inital html structure completed

--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
+<!--
+  Ross Goodliffe
+  16441847
+-->
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Curriculum Vitae</title>
+    <link href="css/style.css" rel="stylesheet" text="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <title>| Ross Goodliffe | Home</title>
+    <!-- favicon link
+    <link rel="icon" href="favicon.ico" type="image/x-icon"
+     -->
   </head>
   <body>
-    Hello Github
+    <!-- Header containing ???? -->
+    <header>
+      <ul class="header-text">
+        <li>home</li>
+        <li><a href="cv.html">cv</a></li>
+        <li><a href="bio.html">bio</a></li>
+        <li><a href="contact.html">contact</a></li>
+      </ul>
+    </header>
+    <!-- End of Header -->
+
+
+    <!-- Footer containing ???? -->
+    <footer>
+
+    </footer>
+    <!-- End of Footer -->
   </body>
 </html>
