--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link href="css/style.css" rel="stylesheet" text="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <title>| Ross Goodliffe | Home</title>
-    <!-- favicon link
-    <link rel="icon" href="favicon.ico" type="image/x-icon"
-     -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Header containing ???? -->
@@ -25,10 +23,24 @@
     </header>
     <!-- End of Header -->
 
+    <!-- Body images -->
+    <ul class="body-images">
+      <li></li>
+      <p href="bio.html">About Ross</p>
+      <li></li>
+      <p href="cv.html">Curriculum Vitae</p>
+      <li ><img src="images/telephone-box-edit.png" class="img-circle" /></li>
+      <p href="contact.html">Contact</p>
+    </ul>
 
     <!-- Footer containing ???? -->
     <footer>
-
+      <ul class ="footer-logos">
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Linked In</li>
+        <li>GitHub</li>
+      </ul>
     </footer>
     <!-- End of Footer -->
   </body>
