--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <h1>Contact Ross</h1>
