--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <title>Curriculum Vitae</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     Curriculum Vitae
