updates to homepage

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Contact</title>
+    <link href="css/style.css" rel="stylesheet" text="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <title>| Contact</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
