--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 
     <!-- Body images -->
     <ul class="body-images">
-      <li></li>
-      <p href="bio.html">About Ross</p>
-      <li></li>
-      <p href="cv.html">Curriculum Vitae</p>
-      <li ><img src="images/telephone-box-edit.png" class="img-circle" /></li>
-      <p href="contact.html">Contact</p>
+      <li>
+        <p href="bio.html">About Ross</p></li>
+      <li><img src="images/pen-edit.png" class="img-circle" />
+        <p href="cv.html">Curriculum Vitae</p></li>
+      <li><img src="images/telephone-box-edit.png" class="img-circle" />
+        <p href="contact.html">Contact</p></li>
     </ul>
-
+    <!--End Body images -->
+    
     <!-- Footer containing ???? -->
     <footer>
       <ul class ="footer-logos">
