changes to index header

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
   <body>
     <!-- Header containing ???? -->
     <header>
-      <ul class="header-text">
-        <li>home</li>
-        <li><a href="cv.html">cv</a></li>
-        <li><a href="bio.html">bio</a></li>
-        <li><a href="contact.html">contact</a></li>
-      </ul>
+      <p class="header-main">
+        Ross Goodliffe.
+      </p>
+      <p class="header-text">
+        home
+        <a href="cv.html">cv</a>
+        <a href="bio.html">bio</a>
+        <a href="contact.html">contact</a>
+      </p>
     </header>
     <!-- End of Header -->
 
-    <!-- Body images -->
+    <!-- Body images
     <ul class="body-images">
       <li>
         <p href="bio.html">About Ross</p></li>
@@ -31,7 +34,7 @@
         <p href="cv.html">Curriculum Vitae</p></li>
       <li><img src="images/telephone-box-edit.png" class="img-circle" />
         <p href="contact.html">Contact</p></li>
-    </ul>
+    </ul> -->
     <!--End Body images -->
 
     <!-- Footer containing ???? -->
