updates on footers, contact page and main page

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,34 @@
     <title>| Contact</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
+  <header>
+    <p class="header-main">
+      Ross Goodliffe.
+    </p>
+    <p class="header-text">
+      <a href="index.html">home</a>
+      <a href="cv.html">cv</a>
+      <a href="bio.html">bio</a>
+      contact
+    </p>
+  </header>
   <body>
     <h1>Contact Ross</h1>
+
+      <form>
+        <p>Your name:
+          <input type="text" placeholder="Your Name"/>
+        </p>
+        <p>Your email address:
+          <input type="text" placeholder="Your email address" />
+        </p>
+        <p>Subject:
+          <input type="text" placeholder="Subject" />
+        </p>
+        <textarea cols="50" rows="10" placeholder="Enter message here"></textarea>
+        <br />
+        <input type="submit" value="Send Email"  />
+      </form>
 
   </body>
 </html>
