--- a/index.html
+++ b/index.html
@@ -26,24 +26,28 @@
     </header>
     <!-- End of Header -->
 
-    <!-- Body images
+    <!-- Body images -->
     <ul class="body-images">
       <li>
         <p href="bio.html">About Ross</p></li>
-      <li><img src="images/pen-edit.png" class="img-circle" />
+      <li><img src="images/book-cv.png" class="img-circle" />
         <p href="cv.html">Curriculum Vitae</p></li>
       <li><img src="images/telephone-box-edit.png" class="img-circle" />
         <p href="contact.html">Contact</p></li>
-    </ul> -->
+    </ul>
+  
     <!--End Body images -->
 
     <!-- Footer containing ???? -->
     <footer>
       <ul class ="footer-logos">
-        <li>Facebook</li>
-        <li>Twitter</li>
-        <li>Linked In</li>
-        <li>GitHub</li>
+        <!--Links are only to the sites mainpage as didn't want to link to my personal
+        pages at this point in time. -->
+        <li>Get in touch!</li>
+        <li><img src="images/fb-logo.png" height="32" width="32" /><a href="https://www.facebook.com"> Facebook</a></li>
+        <li><img src="images/twitter-logo.png" height="32" width="32" /><a href="https://twitter.com/"> Twitter</a></li>
+        <li><img src="images/linkedin-logo.png" height="32" width="32" /><a href="https://www.linkedin.com/"> Linked In</a></li>
+        <li><img src="images/github-logo3.png" height="32" width="32" /><a href="https://github.com/"> GitHub</a></li>
       </ul>
     </footer>
     <!-- End of Footer -->
