--- a/cv.html
+++ b/cv.html
@@ -11,6 +11,17 @@
     <title>| Curriculum Vitae</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
+  <header>
+    <p class="header-main">
+      Ross Goodliffe.
+    </p>
+    <p class="header-text">
+      <a href="index.html">home</a>
+      cv
+      <a href="bio.html">bio</a>
+      <a href="contact.html">contact</a>
+    </p>
+  </header>
   <body>
     Curriculum Vitae
   </body>
