image reformatting and footer updated

--- a/index.html
+++ b/index.html
@@ -26,16 +26,30 @@
     </header>
     <!-- End of Header -->
 
+    <!-- Body main image -->
+    <img src="images/newyork.png" class="newyork-image" />
+
+
+
     <!-- Body images -->
     <ul class="body-images">
-      <li>
-        <p href="bio.html">About Ross</p></li>
-      <li><img src="images/book-cv.png" class="img-circle" />
-        <p href="cv.html">Curriculum Vitae</p></li>
-      <li><img src="images/telephone-box-edit.png" class="img-circle" />
-        <p href="contact.html">Contact</p></li>
+      <li class="body-text">
+        <a href="bio.html">
+          <img src="#" class="img-circle" height="300" width="300" />About Ross
+        </a>
+      </li>
+      <li class="body-text">
+        <a href="cv.html">
+          <img src="images/book-cv.png" class="img-circle" />Curriculum Vitae
+        </a>
+      </li>
+      <li class="body-text">
+        <a href="contact.html">
+          <img src="images/telephone-box-edit.png" class="img-circle" />Contacts
+        </a>
+      </li>
     </ul>
-  
+
     <!--End Body images -->
 
     <!-- Footer containing ???? -->
@@ -44,10 +58,10 @@
         <!--Links are only to the sites mainpage as didn't want to link to my personal
         pages at this point in time. -->
         <li>Get in touch!</li>
-        <li><img src="images/fb-logo.png" height="32" width="32" /><a href="https://www.facebook.com"> Facebook</a></li>
-        <li><img src="images/twitter-logo.png" height="32" width="32" /><a href="https://twitter.com/"> Twitter</a></li>
-        <li><img src="images/linkedin-logo.png" height="32" width="32" /><a href="https://www.linkedin.com/"> Linked In</a></li>
-        <li><img src="images/github-logo3.png" height="32" width="32" /><a href="https://github.com/"> GitHub</a></li>
+        <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
+        <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" height="32" width="32" /> Twitter</a></li>
+        <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" height="32" width="32" /> Linked In</a></li>
+        <li><a href="https://github.com/"><img src="images/github-logo3.png" height="32" width="32" /> GitHub</a></li>
       </ul>
     </footer>
     <!-- End of Footer -->
