content added to CV page.

--- a/cv.html
+++ b/cv.html
@@ -22,15 +22,75 @@
       <a href="contact.html">contact</a>
     </p>
   </header>
+
+
   <body>
-    Curriculum Vitae
+
+    <h1  class="cv-h1">
+      Curriculum Vitae
+    </h1>
+    <p class="cv-text">
+      I am a self-motivated, hardworking, and enthusiastic individual.
+      I possess excellent communication skills with the ability to work
+      effectively and confidently as part of a team and independently.
+    </p>
+    <p class="cv-text">
+      I have experience in both back office and customer service environments
+      working in both England and New Zealand. Currently studying Computing(Web
+      Technology and secruity) at The University of Northampton, UK.
+    </p>
+
+    <h2 class="cv-h2">
+      Currently Studing
+    </h2>
+    <p>
+      <ul class="cv-text2">
+        <li>Web Development</li>
+        <li>Databases</li>
+        <li>Computer Communications</li>
+        <li>Software Engineering</li>
+        <li>Problem Solving and programming</li>
+        <li>Computer Systems</li>
+      </ul>
+    </p>
+
+    <h2 class="cv-h2">
+      Basic Skills In
+    </h2>
+    <p>
+      <ul class="cv-text2">
+        <li>HTML 5</li>
+        <li>CSS</li>
+        <li>Java</li>
+        <li>SQL</li>
+        <li>Python</li>
+        <li>Networking</li>
+      </ul>
+    </p>
+
+    <h2 class="cv-h2">
+      Employment History
+    </h2>
+    <p class="cv-text2">
+      Barclays PLC: June 2015 - August 2016.<br  />
+      Job Role: Senior Fraud Advisor.<br  />
+      Nationwide Building Society: September 2014 - February 2015.<br  />
+      Jobe Role: Complaints Handler.<br  />
+      Base Backpackers, New Zealand: April 2014 - July 2014.<br  />
+      Job Role: Day Reception and Night Audit.
+    </p>
+
+
   </body>
+
+
+
   <!-- Footer containing ???? -->
   <footer>
     <ul class ="footer-logos">
       <!--Links are only to the sites mainpage as didn't want to link to my personal
       pages at this point in time. -->
-      <li>Get in touch!</li>
+      <li>Find me on</li>
       <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
       <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" height="32" width="32" /> Twitter</a></li>
       <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" height="32" width="32" /> Linked In</a></li>
