--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- End of Header -->
 
     <!-- Body main image -->
-    <img src="images/newyork.png" class="newyork-image" />
+    <img src="images/newyorkcolour.png" class="newyork-image" />
 
 
 
