avatar pic added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ul class="body-images">
       <li class="body-text">
         <a href="bio.html">
-          <img src="#" class="img-circle" height="300" width="300" />About Ross
+          <img src="images/avatar.png" class="img-circle" height="300" width="300" />About Ross
         </a>
       </li>
       <li class="body-text">
@@ -45,7 +45,7 @@
       </li>
       <li class="body-text">
         <a href="contact.html">
-          <img src="images/telephone-box-edit.png" class="img-circle" />Contacts
+          <img src="images/telephone-box-edit.png" class="img-circle" />Contact
         </a>
       </li>
     </ul>
