final changes to project

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet" text="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <title>| Contact</title>
+    <title>| Ross Goodliffe | Contact</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <header>
@@ -44,10 +44,10 @@
       </form>
 
   </body>
-  <!-- Footer containing ???? -->
+  <!-- Footer containing links to either social media or networking accounts -->
   <footer>
     <ul class ="footer-logos">
-      <!--Links are only to the sites mainpage as didn't want to link to my personal
+      <!--Links are only to the sites mainpage as I didn't want to link to my personal
       pages at this point in time. -->
       <li>Find me on</li>
       <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
