--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <!-- Header containing ???? -->
+    <!-- Header containing links to other pages -->
     <header>
       <p class="header-main">
         Ross Goodliffe.
@@ -31,28 +31,59 @@
 
 
 
-    <!-- Body images -->
-    <ul class="body-images">
+    <!-- Body images with links to other pages -->
+    <section>
+      <article>
+        <a href="bio.html">
+        <h2>About Ross</h2>
+        <p>
+          <img src="images/avatar.png" class="body-images" height="300" width="300" />
+        </p>
+        </a>
+      </article>
+      <article>
+        <a href="cv.html">
+        <h2>Employment</h2>
+        <p>
+          <img src="images/book-cv.png" class="body-images" height="300" width="300" />
+        </p>
+        </a>
+      </article>
+      <article>
+        <a href="contact.html">
+          <h2>Contact</h2>
+            <p>
+              <img src="images/telephone-box-edit.png" class="body-images" height="300" width="300" />
+            </p>
+        </a>
+      </article>
+    </section>
+
+    <!-- Orignal code removed once flex box was  added. Kept for future development (if flex box
+          is no longer required)
+    <ul>
       <li class="body-text">
         <a href="bio.html">
-          <img src="images/avatar.png" class="img-circle" height="300" width="300" />About Ross
+          <img src="images/avatar.png" class="body-images" height="300" width="300" /> About Ross
         </a>
       </li>
       <li class="body-text">
         <a href="cv.html">
-          <img src="images/book-cv.png" class="img-circle" />Curriculum Vitae
+          <img src="images/book-cv.png" class="body-images" height="300" width="300" /> Curriculum Vitae
         </a>
       </li>
       <li class="body-text">
         <a href="contact.html">
-          <img src="images/telephone-box-edit.png" class="img-circle" />Contact
+          <img src="images/telephone-box-edit.png" class="body-images" height="300" width="300" /> Contact
         </a>
       </li>
     </ul>
+  -->
+
 
     <!--End Body images -->
 
-    <!-- Footer containing ???? -->
+    <!-- Footer containing links to either social media or networking accounts -->
     <footer>
       <ul class ="footer-logos">
         <!--Links are only to the sites mainpage as didn't want to link to my personal
