--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet" text="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <title>| Curriculum Vitae</title>
+    <title>| Ross Goodliffe | Curriculum Vitae</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <header>
@@ -23,9 +23,7 @@
     </p>
   </header>
 
-
   <body>
-
     <h1  class="cv-h1">
       Curriculum Vitae
     </h1>
@@ -39,53 +37,58 @@
       working in both England and New Zealand. Currently studying Computing(Web
       Technology and secruity) at The University of Northampton, UK.
     </p>
-
-    <h2 class="cv-h2">
-      Currently Studing
-    </h2>
-    <p>
-      <ul class="cv-text2">
-        <li>Web Development</li>
-        <li>Databases</li>
-        <li>Computer Communications</li>
-        <li>Software Engineering</li>
-        <li>Problem Solving and programming</li>
-        <li>Computer Systems</li>
-      </ul>
-    </p>
-
-    <h2 class="cv-h2">
-      Basic Skills In
-    </h2>
-    <p>
-      <ul class="cv-text2">
-        <li>HTML 5</li>
-        <li>CSS</li>
-        <li>Java</li>
-        <li>SQL</li>
-        <li>Python</li>
-        <li>Networking</li>
-      </ul>
-    </p>
-
-    <h2 class="cv-h2">
-      Employment History
-    </h2>
-    <p class="cv-text2">
-      Barclays PLC: June 2015 - August 2016.<br  />
-      Job Role: Senior Fraud Advisor.<br  />
-      Nationwide Building Society: September 2014 - February 2015.<br  />
-      Jobe Role: Complaints Handler.<br  />
-      Base Backpackers, New Zealand: April 2014 - July 2014.<br  />
-      Job Role: Day Reception and Night Audit.
-    </p>
-
+  <!-- Flex box contatining information of skills and employment -->
+  <section>
+    <article>
+      <h2 class="cv-h2">
+        Currently Studing
+      </h2>
+      <p>
+        <ul class="cv-text2">
+          <li>Web Development</li>
+          <li>Databases</li>
+          <li>Computer Communications</li>
+          <li>Software Engineering</li>
+          <li>Problem Solving and programming</li>
+          <li>Computer Systems</li>
+        </ul>
+      </p>
+    </article>
+    <article>
+      <h2 class="cv-h2">
+        Basic Skills In
+      </h2>
+      <p>
+        <ul class="cv-text2">
+          <li>HTML 5</li>
+          <li>CSS</li>
+          <li>Java</li>
+          <li>SQL</li>
+          <li>Python</li>
+          <li>Networking</li>
+        </ul>
+      </p>
+    </article>
+    <article>
+      <h2 class="cv-h2">
+        Employment History
+      </h2>
+      <p class="cv-text2">
+        Barclays PLC: June 2015 - August 2016.<br  />
+        Job Role: Senior Fraud Advisor.<br  />
+        Nationwide Building Society: September 2014 - February 2015.<br  />
+        Jobe Role: Complaints Handler.<br  />
+        Base Backpackers, New Zealand: April 2014 - July 2014.<br  />
+        Job Role: Day Reception and Night Audit.<br  />
+        Full Job descriptions available upon request.
+      </p>
+    </article>
+  </section>
 
   </body>
+  <!-- end of body -->
 
-
-
-  <!-- Footer containing ???? -->
+  <!-- Footer containing links to either social media or networking accounts -->
   <footer>
     <ul class ="footer-logos">
       <!--Links are only to the sites mainpage as didn't want to link to my personal
