--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <!-- End of Header -->
 
     <!-- Body main image -->
-    <img src="images/newyorkcolour.png" class="newyork-image" />
-
-
+    <img src="images/newyorkcolour.png" alt="Home page image" class="newyork-image" />
 
     <!-- Body images with links to other pages -->
     <section>
@@ -37,7 +35,7 @@
         <a href="bio.html">
         <h2>About Ross</h2>
         <p>
-          <img src="images/avatar.png" class="body-images" height="300" width="300" />
+          <img src="images/avatar.png" alt="Picture of Ross" class="body-images" height="300" width="300" />
         </p>
         </a>
       </article>
@@ -45,7 +43,7 @@
         <a href="cv.html">
         <h2>Employment</h2>
         <p>
-          <img src="images/book-cv.png" class="body-images" height="300" width="300" />
+          <img src="images/book-cv.png" alt="book to represent CV" class="body-images" height="300" width="300" />
         </p>
         </a>
       </article>
@@ -53,34 +51,11 @@
         <a href="contact.html">
           <h2>Contact</h2>
             <p>
-              <img src="images/telephone-box-edit.png" class="body-images" height="300" width="300" />
+              <img src="images/telephone-box-edit.png" alt="telephone box to represnt contacting" class="body-images" height="300" width="300" />
             </p>
         </a>
       </article>
     </section>
-
-    <!-- Orignal code removed once flex box was  added. Kept for future development (if flex box
-          is no longer required)
-    <ul>
-      <li class="body-text">
-        <a href="bio.html">
-          <img src="images/avatar.png" class="body-images" height="300" width="300" /> About Ross
-        </a>
-      </li>
-      <li class="body-text">
-        <a href="cv.html">
-          <img src="images/book-cv.png" class="body-images" height="300" width="300" /> Curriculum Vitae
-        </a>
-      </li>
-      <li class="body-text">
-        <a href="contact.html">
-          <img src="images/telephone-box-edit.png" class="body-images" height="300" width="300" /> Contact
-        </a>
-      </li>
-    </ul>
-  -->
-
-
     <!--End Body images -->
 
     <!-- Footer containing links to either social media or networking accounts -->
@@ -89,10 +64,10 @@
         <!--Links are only to the sites mainpage as didn't want to link to my personal
         pages at this point in time. -->
         <li>Find me on</li>
-        <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
-        <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" height="32" width="32" /> Twitter</a></li>
-        <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" height="32" width="32" /> Linked In</a></li>
-        <li><a href="https://github.com/"><img src="images/github-logo3.png" height="32" width="32" /> GitHub</a></li>
+        <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" alt="facebook logo" height="32" width="32" /> Facebook</a></li>
+        <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" alt="twitter logo" height="32" width="32" /> Twitter</a></li>
+        <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" alt="linkedin logo" height="32" width="32" /> Linked In</a></li>
+        <li><a href="https://github.com/"><img src="images/github-logo3.png" alt="github logo" height="32" width="32" /> GitHub</a></li>
       </ul>
     </footer>
     <!-- End of Footer -->
