further validation changes

--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet" text="text/css" />
+    <link href="css/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <title>| Ross Goodliffe | Curriculum Vitae</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
@@ -22,7 +22,6 @@
       <a href="contact.html">contact</a>
     </p>
   </header>
-
   <body>
     <h1  class="cv-h1">
       Curriculum Vitae
@@ -43,7 +42,6 @@
       <h2 class="cv-h2">
         Currently Studing
       </h2>
-      <p>
         <ul class="cv-text2">
           <li>Web Development</li>
           <li>Databases</li>
@@ -52,13 +50,11 @@
           <li>Problem Solving and programming</li>
           <li>Computer Systems</li>
         </ul>
-      </p>
     </article>
     <article>
       <h2 class="cv-h2">
         Basic Skills In
       </h2>
-      <p>
         <ul class="cv-text2">
           <li>HTML 5</li>
           <li>CSS</li>
@@ -67,7 +63,6 @@
           <li>Python</li>
           <li>Networking</li>
         </ul>
-      </p>
     </article>
     <article>
       <h2 class="cv-h2">
@@ -84,7 +79,6 @@
       </p>
     </article>
   </section>
-
   </body>
   <!-- end of body -->
 
