--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet" text="text/css" />
+    <link href="css/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <title>| Ross Goodliffe | Home</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <!-- Header containing ???? -->
+    <!-- Header containing links to other pages -->
     <header>
       <p class="header-main">
         Ross Goodliffe.
@@ -27,41 +27,47 @@
     <!-- End of Header -->
 
     <!-- Body main image -->
-    <img src="images/newyork.png" class="newyork-image" />
+    <img src="images/newyorkcolour.png" alt="Home page image" class="newyork-image" />
 
-
-
-    <!-- Body images -->
-    <ul class="body-images">
-      <li class="body-text">
+    <!-- Body images with links to other pages -->
+    <section>
+      <article>
         <a href="bio.html">
-          <img src="#" class="img-circle" height="300" width="300" />About Ross
+        <h2>About Ross</h2>
+        <p>
+          <img src="images/avatar-1.png" alt="Picture of Ross" class="body-images" height="300" width="300" />
+        </p>
         </a>
-      </li>
-      <li class="body-text">
+      </article>
+      <article>
         <a href="cv.html">
-          <img src="images/book-cv.png" class="img-circle" />Curriculum Vitae
+        <h2>Employment</h2>
+        <p>
+          <img src="images/book-cv.png" alt="book to represent CV" class="body-images" height="300" width="300" />
+        </p>
         </a>
-      </li>
-      <li class="body-text">
+      </article>
+      <article>
         <a href="contact.html">
-          <img src="images/telephone-box-edit.png" class="img-circle" />Contacts
+          <h2>Contact</h2>
+            <p>
+              <img src="images/telephone-box-edit.png" alt="telephone box to represnt contacting" class="body-images" height="300" width="300" />
+            </p>
         </a>
-      </li>
-    </ul>
-
+      </article>
+    </section>
     <!--End Body images -->
 
-    <!-- Footer containing ???? -->
+    <!-- Footer containing links to either social media or networking accounts -->
     <footer>
       <ul class ="footer-logos">
         <!--Links are only to the sites mainpage as didn't want to link to my personal
         pages at this point in time. -->
-        <li>Get in touch!</li>
-        <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
-        <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" height="32" width="32" /> Twitter</a></li>
-        <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" height="32" width="32" /> Linked In</a></li>
-        <li><a href="https://github.com/"><img src="images/github-logo3.png" height="32" width="32" /> GitHub</a></li>
+        <li>Find me on</li>
+        <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" alt="facebook logo" height="32" width="32" /> Facebook</a></li>
+        <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" alt="twitter logo" height="32" width="32" /> Twitter</a></li>
+        <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" alt="linkedin logo" height="32" width="32" /> Linked In</a></li>
+        <li><a href="https://github.com/"><img src="images/github-logo3.png" alt="github logo" height="32" width="32" /> GitHub</a></li>
       </ul>
     </footer>
     <!-- End of Footer -->
